# CSE3503

Assignment1/: CMakeLists.txt  README.md  convert.c  main.c
Assignment2/: CMakeLists.txt  README.md  a2_test.txt  convert.c  main.c
BitBoard/: CMakeLists.txt  README.md  bitops.c  bitops.h  game.c  game.h  gui.c  gui.h  main.c
